# src/routes/api/reviews.js
@@ -1,10 +1,14 @@
 const express = require("express");
-const { getReviewsController } = require("../../controllers/reviews");
+const {
+  getReviewsController,
+  isApproveReviewsController,
+} = require("../../controllers/reviews");
 
 const { catchErrors } = require("../../middlewares/catch-errors");
 
 const router = express.Router();
 
 router.get("/", catchErrors(getReviewsController));
+router.post("/isapprove", catchErrors(isApproveReviewsController));
 
 module.exports = router;
